--- a/main.css
+++ b/main.css
@@ -19,6 +19,11 @@
     margin-top: 150px;
     
 }
+li:hover{
+        background-color: #8A7858;
+        border-radius: 4px;
+
+}
 .main p , h2{
     text-align: center;
 
@@ -70,3 +75,4 @@ justify-content: space-around;
     background-color: #2e2e2e;
 
 }
+
